# recruitment-2025-spring

./: .gitignore  Makefile  README.md  build-windows.sh  driver.cc  winograd.h
.cargo/: config.toml
winograd-rs/: Cargo.toml
winograd-rs/.cargo/: config.toml
winograd-rs/src/: lib.rs
