[lib]
crate-type = ['staticlib']

[package]
name = "winograd"
version = "0.1.0"
edition = "2021"

[dependencies]
cubecl = { version = "0.5.0", path = "../../../src/lang/cubecl/crates/cubecl", features = ["wgpu"] }
libc = "0.2.171"

[profile.release]
debug = true
lto = true
codegen-units = 1
panic = 'abort'

[build-dependencies]
cc = "1.2.17"
