[lib]
crate-type = ['staticlib']

[package]
name = "winograd"
version = "0.1.0"
edition = "2021"

[dependencies]
crossbeam = { version = "0.8.4", features = ["crossbeam-channel"] }
cubecl = { version = "0.5.0", path = "../../../src/lang/cubecl/crates/cubecl", features = ["wgpu"] }
itertools = "0.14.0"
libc = "0.2.171"
rayon = "1.10.0"
scope_timer = "0.2.3"

[profile.release]
debug = true
lto = true
# codegen-units = 1
panic = 'abort'

[build-dependencies]
cc = "1.2.17"
