[lib]
crate-type = ['staticlib']

[package]
name = "winograd"
version = "0.1.0"
edition = "2021"

[dependencies]
cubecl = { git = "https://github.com/tracel-ai/cubecl", version = "0.5.0", features = ["wgpu-spirv"] }
libc = "0.2.171"
pollster = "0.4.0"
scope_timer = "0.2.3"

[profile.release]
debug = true
lto = true
# codegen-units = 1
panic = 'abort'

[build-dependencies]
cc = "1.2.17"
